<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/login_layout_form"
        android:layout_width="match_parent"
        android:layout_height="557dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent" tools:layout_editor_absoluteX="0dp"
        >

        <!--        <ImageView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="200dp"-->
        <!--            android:contentDescription="@string/freckle_logo"-->
        <!--            android:src="@drawable/freckle_logo"-->
        <!--            tools:layout_editor_absoluteY="74dp"-->
        <!--            tools:layout_editor_absoluteX="39dp"/>-->

        <TextView
            android:id="@+id/text_view_email"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorSecondaryText"/>

        <EditText
            android:id="@+id/txtNumber"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:hint="@string/prompt_number"
            android:inputType="number"
            android:textColor="@color/colorPrimaryText"
            android:radius="21dp"
            android:background="@drawable/rounded_border"
            android:maxLines="1"
            android:padding="5dp"
            android:paddingStart="16dp" android:paddingEnd="16dp"
            android:autofillHints=""/>

        <Button
            android:id="@+id/generate_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/generate_fibonacci"
            android:textStyle="bold"
            android:textColor="@color/colorSecondaryText"
            android:background="@drawable/button_border_radius"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/text_view_option"
            android:textAlignment="center"
            android:layout_height="60dp"
            android:layout_width="369dp"
            android:text="@string/second_list"
            android:textColor="@color/screenColor"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/filtered_list"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_width="369dp"
            android:text="@string/Filterd_list"
            android:textColor="@color/screenColor"
            android:layout_marginTop="50dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>